--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -12,7 +12,7 @@
         android:layout_height="131dp"
         android:layout_alignEnd="@+id/botaoCadastro"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="67dp"
+        android:layout_marginTop="69dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ag1"
         android:layout_alignRight="@+id/botaoCadastro" />
@@ -35,12 +35,12 @@
         android:layout_height="131dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="116dp"
-        android:layout_marginStart="23dp"
+        android:layout_marginBottom="128dp"
+        android:layout_marginStart="24dp"
         android:background="@android:color/transparent"
         android:src="@drawable/cont"
-        android:layout_marginLeft="23dp"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="24dp" />
 
     <ImageButton
         android:id="@+id/botaoDuvida"
@@ -56,36 +56,36 @@
         android:id="@+id/textView48"
         android:layout_width="132dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/botaoAtividade"
-        android:layout_marginTop="211dp"
+        android:layout_below="@+id/botaoAtividade"
+        android:gravity="center"
         android:text="Atividades"
         android:textSize="20sp"
-        android:gravity="center"
         android:layout_alignLeft="@+id/botaoAtividade" />
 
     <TextView
         android:id="@+id/textView50"
         android:layout_width="132dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/botaoAtividade"
-        android:layout_marginBottom="77dp"
+        android:layout_alignStart="@+id/botaoCadastro"
+        android:layout_below="@+id/botaoCadastro"
+        android:layout_marginTop="-128dp"
         android:gravity="center"
         android:text="Funcionários"
         android:textSize="20sp"
-        android:layout_alignLeft="@+id/botaoAtividade" />
+        android:layout_alignLeft="@+id/botaoCadastro" />
 
     <TextView
         android:id="@+id/textView51"
-        android:layout_width="132dp"
+        android:layout_width="138dp"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/botaoContatos"
         android:layout_alignStart="@+id/botaoContatos"
-        android:layout_alignTop="@+id/textView50"
+        android:layout_below="@+id/botaoCadastro"
+        android:layout_marginTop="-131dp"
         android:gravity="center"
         android:text="Duvidas"
-        android:textSize="20sp"
-        android:layout_alignLeft="@+id/botaoContatos" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textView49"
@@ -104,9 +104,21 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="19dp"
         android:gravity="center"
         android:text="Menu Principal"
+        android:textStyle="bold|italic"
         android:textSize="22sp" />
+
+    <Button
+        android:id="@+id/button"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="130dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:textSize="16sp"
+        android:text="Sincronizar" />
 
 </RelativeLayout>
