--- a/app/src/main/res/layout/valores_tarefa.xml
+++ b/app/src/main/res/layout/valores_tarefa.xml
@@ -12,67 +12,79 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="183dp">
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="79dp"
-            android:layout_height="89dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="19dp"
-            app:srcCompat="@drawable/bloco3"
+            android:layout_height="109dp"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="19dp" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="17dp"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="16dp"
+            app:srcCompat="@drawable/bloco3" />
 
         <TextView
             android:id="@+id/textView27"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="106dp"
-            android:layout_marginStart="106dp"
-            android:layout_marginTop="32dp"
-            android:text="Para:" />
+            android:layout_alignTop="@+id/imageView2"
+            android:layout_marginLeft="107dp"
+            android:layout_marginStart="107dp"
+            android:text="Para:"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/textView28"
             android:layout_width="wrap_content"
-            android:layout_height="33dp"
-            android:layout_alignLeft="@+id/textView27"
-            android:layout_alignParentTop="true"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/campoTitulo"
             android:layout_alignStart="@+id/textView27"
-            android:layout_marginTop="94dp"
-            android:text="Titulo:" />
+            android:text="Titulo:"
+            android:textStyle="bold"
+            android:layout_alignLeft="@+id/textView27" />
+
+        <TextView
+            android:id="@+id/descricao"
+            android:layout_width="243dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="26dp"
+            android:text="(Clique para obter mais informações sobre a tarefa)"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            tools:ignore="RtlCompat" />
 
         <TextView
             android:id="@+id/campoPara"
-            android:layout_width="182dp"
+            android:layout_width="243dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/textView27"
-            android:layout_marginEnd="14dp"
+            android:layout_alignStart="@+id/textView27"
+            android:layout_below="@+id/textView27"
             android:text="TextView"
             tools:ignore="RtlCompat" />
 
         <TextView
             android:id="@+id/campoTitulo"
-            android:layout_width="181dp"
+            android:layout_width="243dp"
             android:layout_height="35dp"
-            android:layout_alignLeft="@+id/campoPara"
-            android:layout_alignStart="@+id/campoPara"
-            android:layout_alignTop="@+id/textView28"
-            android:text="TextView" />
+            android:layout_alignBottom="@+id/imageView2"
+            android:layout_alignStart="@+id/textView27"
+            android:text="TextView"
+            android:layout_alignLeft="@+id/textView27" />
 
         <Space
             android:layout_width="361dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/imageView2"
-            android:layout_marginTop="145dp"
-            android:layout_alignLeft="@+id/imageView2" />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="17dp"
+            android:layout_alignParentRight="true" />
 
     </RelativeLayout>
 
