--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF4500</color>
+    <color name="colorPrimary">#ff4500</color>
     <color name="colorPrimaryDark">#FF4500</color>
     <color name="colorAccent">#ff8c00</color>
     <!--<color name="colorAccent">#FF4081</color>-->
