--- a/app/src/main/res/layout/activity_cadastro_funcionario.xml
+++ b/app/src/main/res/layout/activity_cadastro_funcionario.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,175 +7,109 @@
     android:focusable="true"
     android:focusableInTouchMode="true">
 
-    <RelativeLayout
-        android:id="@+id/relative"
-        android:layout_width="match_parent"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:layout_height="570dp">
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="Informe todos os dados pessoais"
+        android:textSize="24sp"
+        android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="34dp"
-            android:gravity="center"
-            android:text="@string/logo_cad"
-            android:textSize="28sp" />
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/nomeFunc"
+        android:layout_alignStart="@+id/cargoFunc"
+        android:layout_marginBottom="-136dp"
+        android:text="@string/nome"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/nomeFunc"
-            android:layout_alignStart="@+id/textView"
-            android:layout_marginBottom="-117dp"
-            android:text="@string/nome"
-            android:textSize="20sp"
-            android:layout_alignLeft="@+id/textView" />
+    <EditText
+        android:id="@+id/nomeFunc"
+        android:layout_width="309dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="136dp"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="@string/info_nome"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/nomeFunc"
-            android:layout_width="309dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="117dp"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="@string/info_nome"
-            android:inputType="textPersonName"
-            android:textAlignment="center"
-            android:textSize="20sp" />
+    <EditText
+        android:id="@+id/cargoFunc"
+        android:layout_width="302dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="@string/info_cargo"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/cargoFunc"
-            android:layout_width="302dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView9"
-            android:layout_centerHorizontal="true"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="@string/info_cargo"
-            android:inputType="textPersonName"
-            android:textAlignment="center"
-            android:textSize="20sp" />
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/cargoFunc"
+        android:layout_alignStart="@+id/nomeFunc"
+        android:text="@string/cargo"
+        android:textSize="20sp"
+        android:layout_alignLeft="@+id/nomeFunc" />
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/textView"
-            android:layout_marginTop="176dp"
-            android:text="@string/cargo"
-            android:textSize="20sp"
-            android:layout_alignLeft="@+id/textView" />
+    <EditText
+        android:id="@+id/telefoneCampo"
+        android:layout_width="302dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="130dp"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="Informe o telefone"
+        android:inputType="phone"
+        android:maxLength="15"
+        android:textAlignment="center"
+        android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/telefoneCampo"
-            android:layout_width="227dp"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/nomeFunc"
-            android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/nomeFunc"
-            android:layout_marginTop="285dp"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="Informe o telefone"
-            android:maxLength="15"
-            android:inputType="phone"
-            android:textAlignment="center"
-            android:textSize="20sp" />
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/telefoneCampo"
+        android:layout_alignStart="@+id/textView8"
+        android:text="Telefone"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/telefoneCampo"
-            android:layout_alignEnd="@+id/textView8"
-            android:text="Telefone"
-            android:textSize="20sp"
-            android:layout_alignRight="@+id/textView8" />
+    <Button
+        android:id="@+id/cadFunc"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/nomeFunc"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="35dp"
+        android:text="Dados de Acesso >"
+        android:textSize="16sp"
+        android:layout_alignRight="@+id/nomeFunc" />
 
-        <EditText
-            android:id="@+id/loginFunc"
-            android:layout_width="227dp"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/nomeFunc"
-            android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/nomeFunc"
-            android:layout_marginTop="362dp"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="@string/info_login"
-            android:inputType="textPersonName"
-            android:textAlignment="center"
-            android:textSize="20sp" />
+    <Button
+        android:id="@+id/backCadFunc"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="130dp"
+        android:layout_height="58dp"
+        android:layout_alignStart="@+id/textView8"
+        android:layout_alignTop="@+id/cadFunc"
+        android:text="Voltar"
+        android:textSize="16sp"
+        android:layout_alignLeft="@+id/textView8" />
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/loginFunc"
-            android:layout_alignStart="@+id/backCadFunc"
-            android:gravity="center"
-            android:text="@string/login"
-            android:textSize="20sp"
-            android:layout_alignLeft="@+id/backCadFunc" />
-
-        <EditText
-            android:id="@+id/senhaFunc"
-            android:layout_width="227dp"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/nomeFunc"
-            android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/nomeFunc"
-            android:layout_marginTop="442dp"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="@string/info_senha"
-            android:inputType="textPassword"
-            android:textAlignment="center"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/senhaFunc"
-            android:layout_alignStart="@+id/textView11"
-            android:gravity="center"
-            android:text="@string/senha"
-            android:textSize="20sp"
-            android:layout_alignLeft="@+id/textView11" />
-
-        <Button
-            android:id="@+id/cadFunc"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="130dp"
-            android:layout_height="50dp"
-            android:layout_alignEnd="@+id/textView"
-            android:layout_alignParentBottom="true"
-            android:text="Cadastrar"
-            android:textSize="16sp"
-            android:layout_alignRight="@+id/textView" />
-
-        <Button
-            android:id="@+id/backCadFunc"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="130dp"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="25dp"
-            android:text="Voltar"
-            android:textSize="16sp"
-            android:layout_marginLeft="25dp"
-            android:layout_alignParentLeft="true" />
-
-    </RelativeLayout>
-
-</ScrollView>
+</RelativeLayout>
