--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,6 @@
         android:contentDescription="@string/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.544"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.053"
@@ -40,13 +39,13 @@
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.193"
+        app:layout_constraintHorizontal_bias="0.142"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.879" />
+        app:layout_constraintVertical_bias="0.913" />
 
     <Button
-        android:id="@+id/botaoSobre"
+        android:id="@+id/botaoConfiguracao"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="130dp"
         android:layout_height="65dp"
@@ -56,14 +55,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Sobre nós"
+        android:text="Configurações"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.857"
+        app:layout_constraintHorizontal_bias="0.89"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.879" />
+        app:layout_constraintVertical_bias="0.911" />
 
     <TextView
         android:id="@+id/textView18"
@@ -79,10 +78,10 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/botaoLogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.103"
+        app:layout_constraintHorizontal_bias="0.105"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.152" />
+        app:layout_constraintVertical_bias="0.163" />
 
     <EditText
         android:id="@+id/inputLogin"
@@ -96,14 +95,14 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:gravity="center"
-        android:inputType="textPersonName"
         android:hint="@string/info_login"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/botaoLogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.724"
+        app:layout_constraintHorizontal_bias="0.757"
         app:layout_constraintStart_toEndOf="@+id/textView18"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.066" />
+        app:layout_constraintVertical_bias="0.094" />
 
     <TextView
         android:id="@+id/textView19"
@@ -119,7 +118,7 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/botaoLogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.106"
+        app:layout_constraintHorizontal_bias="0.091"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView18"
         app:layout_constraintVertical_bias="0.0" />
